<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/phpbackgroundtwo"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.pc_user.fudora.DotnetFragment">

    <RelativeLayout
        android:layout_width="278dp"
        android:layout_height="463dp"
        android:layout_gravity="center">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColor="#000000"
            android:ems="10"
            android:id="@+id/email"
            android:hint="@string/t_username"
            android:layout_above="@+id/password"
            android:layout_alignLeft="@+id/password"
            android:layout_alignStart="@+id/password" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/password"
            android:textColor="#000000"
            android:hint="@string/t_password"
            android:layout_above="@+id/birthYear"
            android:layout_alignLeft="@+id/birthYear"
            android:layout_alignStart="@+id/birthYear" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/birthYear"
            android:hint="@string/t_birthyear"
            android:textColor="#000000"
            android:layout_above="@+id/zipcode"
            android:layout_alignLeft="@+id/zipcode"
            android:layout_alignStart="@+id/zipcode" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/zipcode"
            android:hint="@string/t_zipcode"
            android:layout_above="@+id/radioButton"
            android:layout_centerHorizontal="true" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/r_male"
            android:textColor="#000000"
            android:id="@+id/radioButton"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/bSignUp"
            android:layout_toStartOf="@+id/bSignUp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/r_female"
            android:textColor="#000000"
            android:id="@+id/radioButton2"
            android:layout_above="@+id/checkBox"
            android:layout_alignRight="@+id/checkBox"
            android:layout_alignEnd="@+id/checkBox" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Register"
            android:textColor="#000000"
            android:id="@+id/title"
            android:layout_above="@+id/email"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30dp" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/c_term_agreement"
            android:textColor="#000000"
            android:id="@+id/checkBox"
            android:layout_below="@+id/radioButton"
            android:layout_alignLeft="@+id/title"
            android:layout_alignStart="@+id/title"
            android:layout_marginTop="32dp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/b_register"
            android:id="@+id/bSignUp"
            android:textColor="#000000"
            android:layout_alignParentBottom="true"
            android:layout_alignRight="@+id/title"
            android:layout_alignEnd="@+id/title" />



    </RelativeLayout>

</FrameLayout>